<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/take_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_a_photo" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insert_a_phone_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/call_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call" />

    <EditText
        android:id="@+id/edit_url_to_Navigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="http://"
        android:inputType="text|textUri" />

    <Button
        android:id="@+id/navigate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigate" />

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editEmailSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="text" />

    <EditText
        android:id="@+id/editMailBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/sendEmailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_email" />
</LinearLayout>